--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-numberings-part/ms-numberings-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-numberings-part/ms-numberings-part.component.html
@@ -63,6 +63,8 @@
               <!-- isMain -->
               <mat-checkbox formControlName="isMain">main</mat-checkbox>
               &nbsp;
+              <mat-checkbox formControlName="isPagination">pagination</mat-checkbox>
+              &nbsp;
 
               <!-- era (bound) -->
               <mat-form-field *ngIf="eraEntries?.length" style="width: 8em">
