--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-composition-part/ms-composition-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-composition-part/ms-composition-part.component.html
@@ -210,6 +210,7 @@
         <mat-tab label="sections" *ngIf="editedSection">
           <itinera-ms-section
             [model]="editedSection"
+            [eraEntries]="eraEntries"
             (modelChange)="onSectionSaved($event)"
             (editorClose)="onSectionClosed()"
           ></itinera-ms-section>
