--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-quires-part/ms-quires-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-quires-part/ms-quires-part.component.html
@@ -91,8 +91,19 @@
               </button>
 
               <!-- child controls -->
-              <!-- isMain -->
-              <mat-checkbox formControlName="isMain">main</mat-checkbox>
+              <!-- tag -->
+              &nbsp;
+              <mat-form-field style="width: 8em;">
+                <input matInput formControlName="tag" placeholder="tag" />
+                <mat-error
+                  *ngIf="
+                    item['controls'].tag.errors?.maxLength &&
+                    (item['controls'].tag.dirty || item['controls'].tag.touched)
+                  "
+                  >too long</mat-error
+                >
+              </mat-form-field>
+
               <!-- startNr -->
               &nbsp;
               <mat-form-field style="width: 5em">
@@ -164,7 +175,7 @@
             </div>
             <!-- note -->
             <div>
-              <mat-form-field style="margin-left: 135px">
+              <mat-form-field style="margin-left: 145px">
                 <input matInput formControlName="note" placeholder="note" />
                 <mat-error
                   *ngIf="
