Moved external IDs component to shell

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
@@ -142,11 +142,11 @@
                 {{ externalIds$?.value.length || 0 }}
               </mat-panel-description>
             </mat-expansion-panel-header>
-            <itinera-external-ids
+            <cadmus-external-ids
               [model$]="externalIds$"
               (modelChange)="onExternalIdsChange($event)"
             >
-            </itinera-external-ids>
+            </cadmus-external-ids>
           </mat-expansion-panel>
         </mat-tab>
 
