--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
@@ -46,10 +46,10 @@
   <!-- ids -->
   <br />
   <h4>external IDs</h4>
-  <itinera-external-ids
+  <cadmus-external-ids
     [model$]="ids$"
     (modelChange)="onIdsChanged($event)"
-  ></itinera-external-ids>
+  ></cadmus-external-ids>
 
   <!-- note -->
   <div>
