--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermark/ms-watermark.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermark/ms-watermark.component.html
@@ -67,10 +67,10 @@
   <!-- ids -->
   <br>
   <h4>external IDs</h4>
-  <itinera-external-ids
+  <cadmus-external-ids
     [model$]="ids$"
     (modelChange)="onIdsChanged($event)"
-  ></itinera-external-ids>
+  ></cadmus-external-ids>
 
   <!-- buttons -->
   <div>
