--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -47,7 +47,7 @@
       <!-- attachments -->
       <cadmus-attachments
         [attTypeEntries]="attTypeEntries"
-        [attachments]="attachments"
+        [attachments]="attachments.value"
         (attachmentsChange)="onAttachmentsChange($event)"
       ></cadmus-attachments>
     </mat-tab>
