--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/serial-text-info-part/serial-text-info-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/serial-text-info-part/serial-text-info-part.component.html
@@ -69,7 +69,17 @@
           </div>
 
           <!-- authors -->
-          TODO
+          <div>
+            <h4>authors</h4>
+            <itinera-cited-persons
+              [langEntries]="langEntries"
+              [nameTagEntries]="nameTagEntries"
+              [nameTypeEntries]="nameTypeEntries"
+              [idTagEntries]="idTagEntries"
+              [persons]="persons.value"
+              (personsChange)="onPersonsChange($event)"
+            ></itinera-cited-persons>
+          </div>
 
           <div>
             <!-- subject -->
