--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/serial-text-info-part/serial-text-info-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/serial-text-info-part/serial-text-info-part.component.html
@@ -76,7 +76,7 @@
               [nameTagEntries]="nameTagEntries"
               [nameTypeEntries]="nameTypeEntries"
               [idTagEntries]="idTagEntries"
-              [persons]="persons.value"
+              [persons]="authors.value"
               (personsChange)="onPersonsChange($event)"
             ></itinera-cited-persons>
           </div>
