--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-quires-part/ms-quires-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-quires-part/ms-quires-part.component.html
@@ -31,7 +31,7 @@
         <button
           type="button"
           mat-icon-button
-          matTooltip="Set quires from formula"
+          matTooltip="Set formula from quires"
           (click)="setFormula()"
         >
           <mat-icon>arrow_upward</mat-icon>
@@ -167,7 +167,6 @@
                 <input
                   matInput
                   type="number"
-                  min="0"
                   formControlName="sheetDelta"
                   placeholder="delta"
                 />
